--- a/app/src/main/res/layout/demon_fragment_review.xml
+++ b/app/src/main/res/layout/demon_fragment_review.xml
@@ -168,7 +168,8 @@
                 android:textSize="45sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:fontFamily="@font/poppins"/>
 
         </LinearLayout>
 
@@ -234,8 +235,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Saya menontonnya kemarin. Jujur saja, hasilnya melebihi ekspektasi saya, seperti biasa. Saya sangat mencintai karya ini."
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp" />
+                        android:textColor="@android:color/white"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/poppins"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -245,7 +247,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -302,8 +304,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Saya menontonnya kemarin. Jujur saja, hasilnya melebihi ekspektasi saya, seperti biasa. Saya sangat mencintai karya ini."
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp" />
+                        android:textColor="@android:color/white"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/poppins"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -313,7 +316,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -370,8 +373,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Saya menontonnya kemarin. Jujur saja, hasilnya melebihi ekspektasi saya, seperti biasa. Saya sangat mencintai karya ini."
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp" />
+                        android:textColor="@android:color/white"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/poppins"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -381,7 +385,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -438,8 +442,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Saya menontonnya kemarin. Jujur saja, hasilnya melebihi ekspektasi saya, seperti biasa. Saya sangat mencintai karya ini."
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp" />
+                        android:textColor="@android:color/white"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/poppins"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -453,6 +458,7 @@
             android:layout_marginTop="24dp"
             android:backgroundTint="#FF4720AD"
             android:text="Add"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/poppins"/>
     </LinearLayout>
 </ScrollView>
