--- a/app/src/main/res/layout/demon_activity_detail.xml
+++ b/app/src/main/res/layout/demon_activity_detail.xml
@@ -41,7 +41,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/demon_background_color" />
+                    android:background="@drawable/demon_background_color"/>
             </FrameLayout>
 
 
@@ -61,13 +61,13 @@
                 android:text="Movie\nReview"
                 android:textColor="@android:color/white"
                 android:textSize="32sp"
-                android:textStyle="bold"
                 android:shadowColor="#80000000"
                 android:shadowDx="2"
                 android:shadowDy="2"
                 android:shadowRadius="4"
                 android:paddingLeft="20dp"
-                android:paddingTop="50dp"/>
+                android:paddingTop="50dp"
+                android:fontFamily="@font/impact"/>
         </FrameLayout>
 
         <!-- Anime title -->
@@ -80,7 +80,8 @@
             android:textStyle="bold"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:layout_marginTop="12dp" />
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/impact"/>
 
         <!-- Tab Layout -->
         <com.google.android.material.tabs.TabLayout
@@ -95,7 +96,8 @@
             app:tabRippleColor="@android:color/transparent"
             app:tabTextColor="@color/white"
             app:tabSelectedTextColor="@android:color/white"
-            app:tabIndicatorHeight="0dp" />
+            app:tabIndicatorHeight="0dp"
+            app:tabTextAppearance="@style/CustomTabText2"/>
 
 
         <!-- ViewPager2 -->
