--- a/app/src/main/res/layout/item_anime.xml
+++ b/app/src/main/res/layout/item_anime.xml
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
+            android:textSize="20dp"
+            android:fontFamily="@font/impact"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -53,8 +53,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Genre"
-                android:textSize="14sp"
-                android:layout_marginStart="10dp"/>
+                android:textSize="14dp"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/poppins"/>
 
         </LinearLayout>
 
@@ -63,7 +64,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Description"
-            android:textSize="11sp"
-            android:ellipsize="end"/>
+            android:textSize="12dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/papyrus"/>
     </LinearLayout>
 </LinearLayout>
