--- a/app/src/main/res/layout/listpage.xml
+++ b/app/src/main/res/layout/listpage.xml
@@ -36,9 +36,9 @@
             android:textAlignment="center"
             android:textSize="35sp"
             android:textColor="@color/white"
-            android:textStyle="bold"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/impact"/>
 
         <!-- Anime List -->
         <androidx.recyclerview.widget.RecyclerView
