--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -44,7 +44,8 @@
             android:textSize="35sp"
             android:textColor="@color/white"
             android:layout_marginBottom="24dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:fontFamily="@font/impact"/>
 
         <!-- Subtitle -->
         <TextView
@@ -52,13 +53,14 @@
             android:layout_height="wrap_content"
             android:text="Come on, register to enjoy the excitement of watching anime without ads"
             android:textAlignment="center"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textColor="@color/white"
             android:layout_marginBottom="32dp"
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
             android:lineSpacingExtra="4dp"
-            android:textStyle="italic"/>
+            android:textStyle="italic"
+            android:fontFamily="@font/poppins"/>
 
         <!-- Username -->
         <EditText
@@ -70,7 +72,8 @@
             android:layout_gravity="center"
             android:textColorHint="#AAAAAA"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/edittext_border_bg"/>
+            android:background="@drawable/edittext_border_bg"
+            android:fontFamily="@font/poppins"/>
 
         <!-- Password -->
         <EditText
@@ -84,7 +87,8 @@
             android:inputType="textPassword"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/edittext_border_bg"/>
+            android:background="@drawable/edittext_border_bg"
+            android:fontFamily="@font/poppins"/>
 
         <TextView
             android:id="@+id/errorTxt"
@@ -92,12 +96,13 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textAlignment="center"
-            android:textSize="14sp"
+            android:textSize="11sp"
             android:textColor="@color/red"
             android:layout_marginBottom="32dp"
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
-            android:lineSpacingExtra="4dp" />
+            android:lineSpacingExtra="4dp"
+            android:fontFamily="@font/poppins"/>
 
         <!-- Login Button -->
         <Button
@@ -109,6 +114,7 @@
             android:textColor="@color/black"
             android:textAllCaps="false"
             android:textSize="16sp"
-            android:backgroundTint="@android:color/white"/>
+            android:backgroundTint="@android:color/white"
+            android:fontFamily="@font/poppins"/>
     </LinearLayout>
 </FrameLayout>
